--- a/views/pet-tmpl.html
+++ b/views/pet-tmpl.html
@@ -1,9 +1,9 @@
         <!--pet Image-->
         <!--pet Image click collapse the image-->
         <a class="pet-grid__pet" >
-            <img class="pet-grid__img"   sizes="(min-width: 960px) 33vw, (min-width: 769px) 50vw, 100vw" alt="">
+            <img ng-hide='pix' ng-click='pix=true' class="pet-grid__img"   sizes="(min-width: 960px) 33vw, (min-width: 769px) 50vw, 100vw" ng-src='{{vidgame.image}}' alt="">
         </a>
-        <a class="pet-grid__pet">
+        <a  ng-show='pix' ng-click='pix=false' class="pet-grid__pet">
             show image
         </a>
 
@@ -11,11 +11,11 @@
         <div class="pet-grid__meta">
             <!--Name click should redirect to the pet-details section. Remember to pass along the pet id so you can make an api call
         to get the specific pet details-->
-            <h3 class="pet-grid__name"><a><!--Name--></a></h3>
+            <h3 class="pet-grid__name"><a ui-sref="details({id: vidgame.id})">{{vidgame.name}}</a></h3>
 
             <!--pet Breed-->
-            <h4 class="pet-grid__sub"><!--Breed--></h4>
+            <h4 class="pet-grid__sub">{{vidgame.breed}}</h4>
 
             <!--pet Age-->
-            <div class="pet-grid__price"><!--Age--> in dog years</div>
+            <div class="pet-grid__price">{{vidgame.age}} in dog years</div>
         </div>
