--- a/views/home.html
+++ b/views/home.html
@@ -1,19 +1,26 @@
 <section class="lede section--padding-both">
     <div class="container">
-        <p>Welcome to the DevMountain Front End Developer assessment. Looks like your routing is working</p>
+        <p>Welcome to the Michael's Angular PetStore</p>
     </div>
 </section>
 <section class="categories section--padding-bottom">
     <div class="container container--medium">
         <div class="category bg-green-light">
+          <!-- <img class="dogimg" src="../img/photo-1.jpeg" alt="" /> -->
             <h2 class="category__title section__title section__title--alt">Pets</h2>
-            <p class="category__description">Super awesome pets that will change your entire life</p>
+            <p class="category__description">Pets that will change your life</p>
 
             <!-- Here is the Shop pets Button  -->
             <!-- This should point to the pets view-->
-            <a class="btn">Shop pets</a>
+            <a class="btn" ui-sref="pets">Shop pets</a>
 
-            <a class="category__background" style="background-image: url('../img/home-clothing-bg.jpg');"></a>
+            <!-- <a class="category__background"
+                      style="background-image: url(../img/photo-1.jpeg);
+                            background-size: 97% 96%;
+                            border: 2px solid black;
+                            margin-left: 43px;
+                            "></a> -->
+              <a class="category__background" style="background-image: url('../img/photo-1.jpeg');"></a>
         </div>
     </div>
 </section>
