--- a/views/home.html
+++ b/views/home.html
@@ -1,18 +1,18 @@
 <section class="lede section--padding-both">
     <div class="container">
-        <p>Welcome to the Michael's Angular PetStore</p>
+        <p>Welcome to the Michael's Angular Movie Display</p>
     </div>
 </section>
 <section class="categories section--padding-bottom">
     <div class="container container--medium">
         <div class="category bg-green-light">
           <!-- <img class="dogimg" src="../img/photo-1.jpeg" alt="" /> -->
-            <h2 class="category__title section__title section__title--alt">Pets</h2>
-            <p class="category__description">Pets that will change your life</p>
+            <h2 class="category__title section__title section__title--alt">Movies</h2>
+            <p class="category__description">Movies that will change your life</p>
 
             <!-- Here is the Shop pets Button  -->
             <!-- This should point to the pets view-->
-            <a class="btn" ui-sref="pets">Shop pets</a>
+            <a class="btn" ui-sref="pets">Shop Movies</a>
 
             <!-- <a class="category__background"
                       style="background-image: url(../img/photo-1.jpeg);
@@ -20,7 +20,9 @@
                             border: 2px solid black;
                             margin-left: 43px;
                             "></a> -->
-              <a class="category__background" style="background-image: url('../img/photo-1.jpeg');"></a>
+              <a class="category__background"
+              style="background-image: url('https://d1tizfy05xv795.cloudfront.net/2016/10/Tarzan.jpg');
+                background-size: contain;"></a>
         </div>
     </div>
 </section>
